[gd_scene load_steps=2 format=3 uid="uid://cnu3g4uuvf7id"]

[ext_resource type="Script" path="res://Scripts/UIHandler.gd" id="1_56j55"]

[node name="ui_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56j55")

[node name="Ingame_UI" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Requests" type="ColorRect" parent="Ingame_UI"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.683725, 0.471362, 0.216233, 1)

[node name="r_box" type="VBoxContainer" parent="Ingame_UI/Requests"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Panel2" type="Panel" parent="Ingame_UI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Panel3" type="Panel" parent="Ingame_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "R E S U M E"

[node name="Exit" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "E X I T"
